--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3603,3 +3603,103 @@ ion-icon:hover{
     filter: invert(100%);
     }
     } */
+
+
+    
+            
+    #container-caroussel {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 100vh;
+        background-color: white;
+    }
+
+    #container-caroussel img{
+        max-width: 90%;
+        max-height: 90%;
+        border-radius: 10px;
+    }
+                
+    #carousel, #navigation {
+        flex: initial;
+        display: block;
+    }
+                
+    #carousel {
+        position: relative;
+        top: -10vh;
+        overflow: hidden;
+        width: 80%;
+        height: 80vh;
+        border-radius: 4px;
+        background-color: #fff;
+    }
+                
+    .p-wrapper {
+        position: relative;
+        width: 100%;
+        height: 100%;
+        transition: transform 0.4s ease-in-out;
+    }
+                
+    #button_a:checked ~ #carousel .p-wrapper {
+        -webkit-transform: translateY(0);
+        transform: translateY(0); 
+    }
+                
+    #button_b:checked ~ #carousel .p-wrapper {
+        -webkit-transform: translateY(-100%);
+        transform: translateY(-100%); 
+    }
+    
+    #button_c:checked ~ #carousel .p-wrapper {
+        -webkit-transform: translateY(-200%);
+        transform: translateY(-200%); 
+    }
+    
+    #button_d:checked ~ #carousel .p-wrapper {
+        -webkit-transform: translateY(-300%);
+        transform: translateY(-300%); 
+    }
+                
+    [class^="panel_"] {
+        overflow: auto;
+        position: relative;
+        width: inherit;
+        height: inherit;
+        padding: 48px;
+    }
+                
+    #navigation {
+       position: relative;
+       right: 5rem;
+    }
+    
+    [class^="label_"] {
+        display: block;
+        cursor: pointer;
+        margin: 8px 0;
+        width: 20rem;
+        height: 32px;
+        line-height: 32px;
+        text-align: center;
+        border-radius: 4px;
+        color: #aaa;
+        background-color: #fff;
+        transition: all 0.3s ease;
+    }
+                
+    [class^="label_"]:hover {
+        color: #444;
+        background-color: #ffeed9;
+    }
+                
+    #button_a:checked ~ #navigation .label_a,
+    #button_b:checked ~ #navigation .label_b,
+    #button_c:checked ~ #navigation .label_c,
+    #button_d:checked ~ #navigation .label_d {
+         cursor: default;
+         color: #fff;
+         background-color: #222;
+    }
